# icognition-backend

./: .gitignore  CHAT_INTERFACE_REPLICATION_GUIDE.md  CONTENT_EXTRACTION_ANALYSIS.md  CONTENT_EXTRACTION_FIX_SUMMARY.md  DOCUMENT_72_FINAL_REPORT.md  Dockerfile  Local iCognition.session.sql  PLAN.md  README.md  REMOVE_WORKTREE.md  URL_WARNING_IMPROVEMENTS.md  alembic.ini  db_debug.ipynb  docker-compose.yml  pyproject.toml  requirements.txt  tester.py  update_chrome_extension_sse.py
backend/: .dockerignore  .env.example  .gcloudignore  CHROME_EXTENSION_SSE_MIGRATION.md  DSPY_CONTENT_EXTRACTION_TESTING.md  DSPY_MIGRATION_SUMMARY.md  Dockerfile  KG_Creation.md  MIGRATION_VALIDATION_RESULTS.md  README.md  SSE_MIGRATION.md  SYSTEM_ENDPOINTS_README.md  alembic.ini  cloudbuild-backend.yaml  gcloud_setup.md  get_session_id.py  pyproject.toml  requirements.txt  test_system_endpoints.py  test_url_fetch.py  verify_session_reuse.py
backend/agent/prompts/: analysis.yaml  chat.yaml  dspy.yaml  extraction.yaml  research.yaml  skills.yaml  x_post.yaml
backend/app/: db_seed.py  deleters.py  embedding_handler.py  entity_handler.py  extension_chat_handler.py  gemini_client.py  getters.py  html_parser.py  main.py  main_new.py  models.py  models_kg.py  prompt_models.py  reproduce_issue.py
backend/app/api/: errors.py
backend/app/chat_workflows/: document_chat_workflow.yaml  research_graph.py  research_multiagent_graph.py  research_subagent.py  tavily_tools.py  tools.py
backend/app/core/: admin_auth.py  audit_logging.py  audit_middleware.py  config.py  firebase_auth.py  security_config.py  security_middleware.py  user_context.py
backend/app/db/: database.py
backend/app/legacy_files/: app_logic.py  auth_middleware.py  background_task_manager.py  document_ownership.py  external_runner.py  html_parser.py  main_old.py  search_handler.py  source_doc_handler.py  wikidata_client.py
backend/app/services/: base_service.py  bookmark_service.py  chat_agent_service.py  chat_session_service.py  content_analysis_service.py  content_analysis_task_manager.py  content_validation_service.py  document_service.py  dspy_content_service.py  dspy_entity_adapter.py  dspy_entity_service.py  dspy_extraction_service.py  dspy_extraction_service_no_entities.py  dspy_models.py  dspy_models_entities_only.py  dspy_models_no_entities.py  embedding_service.py  entity_extraction_service.py  entity_extraction_task_manager.py  gemini_service.py  graph_service.py  html_content_service.py  image_analysis_service.py  kg_adapter.py  kg_pipeline.py  prompts.py  (+10 more)
backend/migrations/: env.py
backend/migrations-gcp-dev/: README  env.py
backend/migrations-local/: README
backend/scripts/: backfill_research_documents.py  diag_doc_extraction.py  merge_entities.py  purge_legacy_documents.py  reflection_demo.py  seed_extra_prompts.py  seed_extra_prompts_entities.py  seed_ontology.py  seed_router_prompts.py  seed_social_writer_prompt.py  seed_x_langgraph_prompts.py  test_google_search.py  test_research_agent.py  update_prompt_types.py  visualize_graph.py
backend/tests/: README.md  conftest.py  run_chat_backend_test.py  run_dspy_test.py  run_dspy_test_no_entities.py  test_api_compatibility.py  test_api_documentation.py  test_api_reliability.py  test_api_responses.py  test_api_scalability.py  test_api_versioning.py  test_authentication_flow.py  test_bookmark_endpoints.py  test_bookmark_workflow.py  test_chat_agent_google_search.py  test_chat_handler.py  test_chat_stream_endpoint.py  test_content_analysis_background_task.py  test_database_interaction.py  test_document_direct_content.py  test_document_endpoints.py  test_dspy_content_service.py  test_dspy_entity_service.py  test_dspy_extraction.py  test_dspy_migration.py  test_dspy_services_integration.py  test_edge_cases.py  test_embedding_service.py  test_endpoint_coverage.py  test_entity_extraction_background_task.py  test_error_handling.py  test_integration.py  test_middleware_integration.py  test_mock_services.py  test_performance.py  test_research_agent.py  test_security.py  test_sse_chat.py  test_system_endpoints.py  test_validation.py
(+438 files in other folders)
