[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "icognition-backend"
version = "0.1.0"
description = "AI-powered document analysis and knowledge management platform"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Eliran Boraks", email = "eliran@icognition.ai"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Web Framework
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "starlette>=0.35.1",
    "python-multipart>=0.0.9",
    "websockets>=13.1",
    # Database & ORM
    "sqlmodel>=0.0.19",
    "sqlalchemy>=2.0.31",
    "alembic>=1.13.2",
    "pgvector>=0.2.5",
    "pg8000>=1.30.4",
    # HTTP Clients
    "httpx>=0.23.2",
    "aiohttp>=3.9.3",
    "requests>=2.31.0",
    # Data Processing
    "pydantic>=2.7.4",
    "pydantic-core>=2.14",
    "numpy>=1.26.3",
    "scipy>=1.14.1",
    # HTML/Text Processing
    "beautifulsoup4>=4.12.3",
    "lxml>=5.1.0",
    "breadability>=0.1.20",
    "markdown>=3.7",
    "sumy>=0.11.0",
    "nltk>=3.8.1",
    "stop-words>=2018.7.23",
    # Google AI & Cloud
    "google-genai",
    "google-cloud-storage>=2.18.2",
    # PDF Processing (to be removed)
    "pymupdf4llm>=0.0.13",
    # File Handling
    "aiofiles>=24.1.0",
    "smart-open>=6.4.0",
    "cloudpathlib>=0.16.0",
    # Utilities
    "python-dateutil>=2.8.2",
    "pyyaml>=6.0.1",
    "click>=8.1.7",
    "tqdm>=4.66.1",
    "levenshtein>=0.27.1",
    # Development & Testing
    "pytest>=8.3.3",
    "pytest-asyncio",
    "psycopg>=3.1.19",
    "psycopg-binary>=3.1.19",
    "python-dotenv>=1.0.1",
    "pydantic-settings>=2.3.4",
    "asyncpg>=0.29.0",
    "greenlet>=3.0.3",
    "email-validator>=2.3.0",
    "firebase-admin==6.5.0",
    "aiosqlite>=0.21.0",
    "pytest-cov>=7.0.0",
    "dspy-ai>=3.0.2",
    "thefuzz>=0.22.1",
    "langgraph>=1.0.0",
    "langchain>=1.0.0",
    "langchain-postgres>=0.0.16",
    "langchain-google-genai>=2.0.0",
    "langchainhub>=0.1.20",
    "langchain-text-splitters>=0.3.0",
    "langgraph-checkpoint-postgres>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio",
    "debugpy>=1.8.0",
]

# Commented out dependencies (to be removed)
# ml = [
#     "torch>=2.2.2",
#     "sentence-transformers>=2.6.1",
#     "spacy>=3.7.2",
#     "spacy-legacy>=3.0.12",
#     "spacy-loggers>=1.0.5",
#     "thinc>=8.2.2",
#     "tokenizers>=0.15.1",
#     "huggingface-hub>=0.20.3",
# ]

# jupyter = [
#     "ipykernel>=6.29.0",
#     "ipython>=8.18.1",
#     "ipywidgets>=8.1.1",
#     "jupyter_client>=8.6.0",
#     "jupyter_core>=5.7.1",
#     "jupyterlab-widgets>=3.0.9",
#     "matplotlib-inline>=0.1.6",
# ]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-asyncio",
    "debugpy>=1.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py39"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
target-version = ['py39']
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
